# mock-data-platform

./: CLAUDE.md  README.md  docker-compose.yml
.claude/skills/payments-vendor-api/: SKILL.md
sources/apis/payments-vendor/: Dockerfile  README.md  pyproject.toml
sources/apis/payments-vendor/src/payments_vendor/: __init__.py  main.py
sources/apis/payments-vendor/src/payments_vendor/api/v1/: customers.py
sources/apis/payments-vendor/src/payments_vendor/db/: __init__.py  init_db.py  session.py
sources/apis/payments-vendor/src/payments_vendor/internal/: __init__.py  config.py  fix.py  generator.py  messy.py  quality_issues.py
sources/apis/payments-vendor/src/payments_vendor/models/: customer.py
sources/apis/payments-vendor/src/payments_vendor/schemas/: customer.py
sources/apis/payments-vendor/tests/: __init__.py
