[project]
name = "payments-vendor"
version = "0.1.0"
description = "Simulated third-party payments vendor API (Stripe-like)"
readme = "README.md"
authors = [
    { name = "jduran9987", email = "jduran9987@gmail.com" }
]
requires-python = ">=3.14"
dependencies = [
    "faker>=40.11.0",
    "fastapi>=0.135.1",
    "psycopg2-binary>=2.9.11",
    "sqlmodel>=0.0.37",
    "uvicorn>=0.41.0",
]

[project.scripts]
payments-vendor = "payments_vendor:main"

[build-system]
requires = ["uv_build>=0.10.9,<0.11.0"]
build-backend = "uv_build"

[tool.ruff.lint.per-file-ignores]
"src/payments_vendor/api/**" = ["B008"]  # Depends() in defaults is standard FastAPI

[dependency-groups]
dev = [
    "ruff>=0.15.6",
]
